--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-.bundle/
-.yardoc/
-doc/
-log/*.log
-pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+.byebug_history
+*.gem
+.DS_Store
