Update to v0.2.1; Update gem dependencies
Also fix rubocop offenses for frozen_string_literal pragma

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,9 @@
-# AllCops:
+AllCops:
+  UseCache: true
+  DisplayCopNames: true
+  DisplayStyleGuide: true
+  ExtraDetails: false
+  TargetRubyVersion: 2.5.3
 
 Layout/DotPosition:
   EnforcedStyle: trailing
