--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -77,6 +77,10 @@ Style/Alias:
 Style/BlockDelimiters:
   Enabled: false # Reconsider later.
 
+Style/ClassAndModuleChildren:
+  AutoCorrect: true
+  EnforcedStyle: compact
+
 Style/EmptyElse:
   # It"s helpful to show intent by including a comment in an else block.
   Enabled: false
@@ -93,6 +97,9 @@ Style/FormatString:
 
 Style/Lambda:
   EnforcedStyle: literal
+
+Style/LambdaCall:
+  Enabled: false # Allow ServiceObject.(*). Only use on classes, not instances.
 
 Style/OpenStructUse:
   Exclude:
