Add a benchmarking script for comparing performance of formatters
Performance of Formatters can be tested by playing the Formatters
Benchmarking Scripts in the pry console for this gem.

Custom Formatters may be similarly gauged for comparison by adding them
to the `custom_formatter_klasses` array before playing the script.

Example:

```ruby
custom_formatter_klasses = [MyCustomFormatter]

play scripts/benchmarking/formatters.rb
```

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,6 +34,7 @@ Layout/LineLength:
   Max: 80
   Exclude:
     - "object_identifier.gemspec"
+    - "scripts/benchmarking/**/*"
 
 Layout/MultilineMethodCallBraceLayout:
   EnforcedStyle: same_line
@@ -52,6 +53,10 @@ Lint/AmbiguousOperator:
 
 Lint/AmbiguousRegexpLiteral:
   Enabled: false # Conflicts with other rules.
+
+Lint/OrAssignmentToConstant:
+  Exclude:
+    - "scripts/**/*"
 
 Lint/Void:
   CheckForMethodsWithNoSideEffects: true
