--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@
 # This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
 # For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
 
-name: Ruby
+name: CI
 
 on:
   push:
@@ -24,15 +24,39 @@ jobs:
         ruby-version: ['2.7', '3.0', '3.1', '3.2']
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Ruby
-      # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-      # change this to (see https://github.com/ruby/setup-ruby#versioning):
-      # uses: ruby/setup-ruby@v1
-      uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127.0
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Run tests
-      run: bundle exec rake
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+      - name: Run tests
+        run: bundle exec rake
+
+  # pronto:
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+
+  #     - run: |
+  #         git fetch --no-tags --prune --depth=10 origin +refs/heads/*:refs/remotes/origin/*
+
+  #     - name: Set up Ruby
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: '3.2'
+  #         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+  #     - name: Setup pronto
+  #       run: gem install pronto pronto-rubocop pronto-reek
+
+  #     - name: Run Pronto
+  #       run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }}
+  #       env:
+  #         PRONTO_PULL_REQUEST_ID: ${{ github.event.pull_request.number }}
+  #         PRONTO_GITHUB_ACCESS_TOKEN: "${{ github.token }}"
