Fixup "Problems" form VS Code...
Rename `kargs` -> `kwargs` because I think the latter is more common.

Fix Rubocop complaints

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -86,6 +86,10 @@ Style/ClassAndModuleChildren:
   AutoCorrect: true
   EnforcedStyle: compact
 
+Style/Documentation:
+  Exclude:
+    - "test/**/*"
+
 Style/EmptyElse:
   # It"s helpful to show intent by including a comment in an else block.
   Enabled: false
