Update Rakefile style, add suggested Rubocop gems & apply fixes
This Rakefile style is part of my new standardized gemset that I'm
building out. It affords simply running `rake` and getting all of:
`rake test`, rubocop, and reek runs, all at the same time and using
an ActiveRecord::Migration#say-style output for each.

Updates here and to rubocop gems revealed additional issues that
needed fixing/updating.

Remove the .rubocop file in favor of applying all configuration in just
one spot: .rubocop.yml
- This also fixes the duplicated output I was seeing when running
  rubocop. This was coming from the `--format=fuubar`, specifically.

Change Rubocop's Gemspec/DevelopmentDependencies cop to prefer defining
development-only dependencies (gems) in the .gemspec. Per the bundler
docs:
> The benefit of putting this dependency specification inside of foodie.gemspec rather than the Gemfile is that anybody who runs gem install foodie --dev will get these development dependencies installed too. This command is used for when people wish to test a gem without having to fork it or clone it from GitHub.
See: https://bundler.io/guides/creating_gem.html#testing-our-gem

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,7 @@
+require:
+  - rubocop-rake
+  - rubocop-minitest
+
 AllCops:
   UseCache: true
   DisplayCopNames: true
@@ -5,6 +9,9 @@ AllCops:
   ExtraDetails: false
   TargetRubyVersion: 2.4.0
   NewCops: enable
+
+Gemspec/DevelopmentDependencies:
+  EnforcedStyle: gemspec # See: https://bundler.io/guides/creating_gem.html#testing-our-gem
 
 Layout/DotPosition:
   EnforcedStyle: trailing
@@ -63,8 +70,9 @@ Lint/Void:
 
 Metrics/BlockLength:
   AllowedMethods:
-    - describe
-    - context
+    - new
+    - describe # Tests
+    - context # Tests
     - ips # Benchmarking
 
 Metrics/ClassLength:
@@ -99,7 +107,7 @@ Style/EmptyMethod:
 
 Style/ExpandPathArguments:
   Exclude:
-    - "object_inspector.gemspec"
+    - "object_identifier.gemspec"
 
 Style/FormatString:
   Enabled: false # % notation with an Array just reads better sometimes.
@@ -110,6 +118,9 @@ Style/Lambda:
 Style/LambdaCall:
   Enabled: false # Allow ServiceObject.(*). Only use on classes, not instances.
 
+Style/NumericPredicate:
+  AutoCorrect: true
+
 Style/OpenStructUse:
   Exclude:
     - "test/**/*"
@@ -119,6 +130,12 @@ Style/RegexpLiteral:
 
 Style/RescueStandardError:
   EnforcedStyle: implicit
+
+Style/ReturnNil:
+  Enabled: true
+
+Style/StringMethods:
+  Enabled: true
 
 Style/SingleLineMethods:
   Exclude:
