--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@
 name: CI
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.7', '3.0', '3.1', '3.2']
+        ruby-version: ["2.7", "3.0", "3.1", "3.2"]
 
     steps:
       - name: Checkout code
@@ -31,32 +31,22 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          bundler-cache: true # runs `bundle install` and caches installed gems automatically
 
       - name: Run tests
-        run: bundle exec rake
+        run: bundle exec rake test
 
-  # pronto:
-  #   runs-on: ubuntu-latest
+  rubocop:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.2.2"
+          bundler-cache: true # runs `bundle install` and caches installed gems automatically
 
-  #     - run: |
-  #         git fetch --no-tags --prune --depth=10 origin +refs/heads/*:refs/remotes/origin/*
-
-  #     - name: Set up Ruby
-  #       uses: ruby/setup-ruby@v1
-  #       with:
-  #         ruby-version: '3.2'
-  #         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-
-  #     - name: Setup pronto
-  #       run: gem install pronto pronto-rubocop pronto-reek
-
-  #     - name: Run Pronto
-  #       run: pronto run -f github_status github_pr -c origin/${{ github.base_ref }}
-  #       env:
-  #         PRONTO_PULL_REQUEST_ID: ${{ github.event.pull_request.number }}
-  #         PRONTO_GITHUB_ACCESS_TOKEN: "${{ github.token }}"
+      - name: Run rubocop
+        run: bundle exec rubocop
