Update gems; Update Rubocop config; Set target Ruby to v2.7
This is the (mostly) common .rubocop.yml from my other, more recent
gems.

Update rubocop offenses after applying latest style rules.

Update .gemspec in the same fashion, from latest gem work.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,18 +3,43 @@ require:
   - rubocop-minitest
 
 AllCops:
+  NewCops: enable
+  TargetRubyVersion: 2.7
   UseCache: true
   DisplayCopNames: true
   DisplayStyleGuide: true
-  ExtraDetails: false
-  TargetRubyVersion: 2.4.0
-  NewCops: enable
+  ExtraDetails: true
 
 Gemspec/DevelopmentDependencies:
   EnforcedStyle: gemspec # See: https://bundler.io/guides/creating_gem.html#testing-our-gem
 
+Layout/ClassStructure:
+  Enabled: true
+  Categories:
+    module_inclusion:
+      - extend
+      - include
+      - prepend
+    attributes:
+      - attr_accessor
+      - attr_reader
+      - attr_writer
+  ExpectedOrder:
+    - constants
+    - module_inclusion
+    - attributes
+    - public_class_methods
+    - initializer
+    - public_methods
+    - predicates
+    - protected_methods
+    - private_methods
+
 Layout/DotPosition:
   EnforcedStyle: trailing
+
+Layout/EmptyLineAfterGuardClause:
+  Enabled: true
 
 Layout/EndOfLine:
   EnforcedStyle: lf
@@ -42,6 +67,20 @@ Layout/LineLength:
   Exclude:
     - "object_identifier.gemspec"
     - "scripts/benchmarking/**/*"
+  AllowedPatterns:
+    # YARD doc `@example` output.
+    - !ruby/regexp /\A *#   \# => /
+    - !ruby/regexp /\A *#   =/
+
+Layout/MultilineAssignmentLayout:
+  Enabled: true
+  SupportedTypes:
+    - block
+    - case
+    - class
+    - if
+    # - kwbegin
+    - module
 
 Layout/MultilineMethodCallBraceLayout:
   EnforcedStyle: same_line
@@ -55,11 +94,11 @@ Layout/MultilineMethodDefinitionBraceLayout:
 Layout/MultilineOperationIndentation:
   Enabled: false # Waiting for e.g. `indented_relative_to_receiver`.
 
-Lint/AmbiguousOperator:
-  Enabled: false # Conflicts with other rules.
+# Lint/AmbiguousOperator:
+#   Enabled: false # Conflicts with other rules.
 
-Lint/AmbiguousRegexpLiteral:
-  Enabled: false # Conflicts with other rules.
+# Lint/AmbiguousRegexpLiteral:
+#   Enabled: false # Conflicts with other rules.
 
 Lint/OrAssignmentToConstant:
   Exclude:
@@ -76,31 +115,82 @@ Metrics/BlockLength:
     - ips # Benchmarking
 
 Metrics/ClassLength:
+  CountAsOne:
+    - array
+    - heredoc
+    - method_call
   Exclude:
     - "test/**/*"
+
+Metrics/MethodLength:
+  CountAsOne:
+    - array
+    - hash
+    - heredoc
+    - method_call
 
 Naming/MethodParameterName:
   AllowedNames:
     - a
     - b
 
+Naming/RescuedExceptionsVariableName:
+  PreferredName: ex
+
 Style/Alias:
   EnforcedStyle: prefer_alias_method
 
 Style/BlockDelimiters:
-  Enabled: false # Reconsider later.
+  EnforcedStyle: semantic
+  AllowBracesOnProceduralOneLiners: true
+  FunctionalMethods:
+    # Minitest Spec DSL. (Rubocop defaults.)
+    - let
+    - let!
+    - subject
+    - watch
+    # Overrides (Defaulted to Procedural by Rubocop.)
+    - tap
+    # MuchStub
+    - call
+    - on_call
+    - spy
+    # - tap (Already listed above.)
+    - tap_on_call
+    - with
+  ProceduralMethods: # Defining this just to remove `tap` from the list.
+    - benchmark
+    - bm
+    - bmbm
+    - create
+    - each_with_object
+    - measure
+    - new
+    - realtime
+    # - tap (Remove from Rubocop defaults.)
+    - with_object
 
 Style/ClassAndModuleChildren:
   AutoCorrect: true
   EnforcedStyle: compact
+  Exclude:
+    - "test/**/*"
+
+Style/CollectionMethods:
+  Enabled: true
+  PreferredMethods:
+    collect: map
+    collect!: map!
+    find_all: select
+    detect: detect
+    inject: inject
 
 Style/Documentation:
   Exclude:
     - "test/**/*"
 
 Style/EmptyElse:
-  # It"s helpful to show intent by including a comment in an else block.
-  Enabled: false
+  Enabled: false # Including a comment in an empty else block shows intent.
 
 Style/EmptyMethod:
   EnforcedStyle: expanded
@@ -146,3 +236,9 @@ Style/StringLiterals:
 
 Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
+
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: comma
