Remove use of OpenStruct
This allows us to stop disabling the Performance/OpenStruct rubocop
cop. Basically, OpenStruct is slow and its use should be phased out...
so we're doing that now!
- Reference:
  https://docs.rubocop.org/rubocop-performance/cops_performance.html#performanceopenstruct

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,5 +10,6 @@ inherit_gem:
 AllCops:
   TargetRubyVersion: 3.2
 
-Performance/OpenStruct:
-  Enabled: false # Reconsider later.
+Naming/MethodParameterName:
+  AllowedNames:
+    - id
